# vleer

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml  nightly.yml  rust-clippy.yml
assets/: key.asc
assets/images/: icon.icns
migrations/: 20251112135450_init.sql
src/: lib.rs  main.rs  single_instance.rs  status.rs  updater.rs
src/data/: config.rs  db.rs  metadata.rs  mod.rs  models.rs  scan.rs  scanner.rs  state.rs  telemetry.rs  types.rs
src/data/db/: mod.rs  models.rs  queries.rs  repo.rs
src/media/: equalizer.rs  media_controls.rs  media_keys.rs  mod.rs  playback.rs  queue.rs  visualizer.rs
src/media/controller/: linux.rs  macos.rs  mod.rs  windows.rs
src/media/media_controls/: controllers.rs  macos.rs  mod.rs  mpris.rs  windows.rs
src/ui/: app.rs  discord_presence.rs  global_actions.rs  media_keys.rs  mod.rs  state.rs  updater.rs  variables.rs
src/ui/assets/: image_cache.rs  mod.rs  thumb_cache.rs
src/ui/components/: button.rs  card.rs  context_menu.rs  div.rs  icons.rs  input.rs  mod.rs  nav_button.rs  navbutton.rs  pane.rs  progress_bar.rs  progressbar.rs  scrollbar.rs  slider.rs  song_table.rs  songtable.rs  switch.rs  title.rs  window_controls.rs
src/ui/components/icons/: icon.rs  icons.rs  mod.rs
src/ui/layout/: library.rs  mod.rs  navbar.rs  player.rs  queue.rs
src/ui/views/: album.rs  albums.rs  artists.rs  home.rs  mod.rs  playlist.rs  playlists.rs  settings.rs  songs.rs
tests/: db_bench.rs  updater.rs
