[package]
name = "vleer"
description = "Music, but without the subscription."
version = "0.1.0"
edition = "2024"
authors = ["PandaDEV <hello@pandadev.net>"]
homepage = "https://vleer.app"
repository = "https://github.com/vleerapp/vleer"
license = "AGPL-3.0"
categories = ["multimedia::audio"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
gpui_macros = { git = "https://github.com/zed-industries/zed" }
anyhow = "1.0.101"
dirs = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
rodio = { version = "0.21.1", features = ["symphonia-all"] }
cuid2 = "0.1.4"
url = "2.5.8"
rust-embed = "8.11.0"
lofty = "0.23.1"
walkdir = "2.5.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
image = "0.25.9"
sha2 = "0.10.9"
indexmap = "2.13.0"
rustc-hash = "2.1.1"
unicode-segmentation = "1.12.0"
lru = "0.16.3"
lazy_static = "1.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
souvlaki = "0.8.3"
spectrum-analyzer = "1.7.0"
discord-rich-presence = "1.1.0"
chrono = "0.4.43"
base64 = "0.22.1"
itertools = "0.14.0"
async-trait = "0.1.89"
raw-window-handle = "0.6.2"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.9.0"
zbus = "5.13.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0" # GPUI issue, zed#47168
block2 = "0.6.2"
imagesize = "0.14.0"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSImage"] }
objc2-core-foundation = { version = "0.3.2", features = ["CFCGTypes"] }
objc2-foundation = { version = "0.3.2", features = [
  "NSData",
  "NSDictionary",
  "NSValue",
] }
objc2-media-player = { version = "0.3.2", features = ["MPNowPlayingInfoCenter"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Devices_Enumeration",
    "Foundation_Collections",
    "Media",
    "Media_Audio",
    "Media_MediaProperties",
    "Media_Render",
    "Storage_Search",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_WinRT",
] }
windows-future = "0.3.2"
windows-result = "0.4.1"

[package.metadata.packager]
product_name = "Vleer"
description = "Music, but without the subscription."
authors = ["PandaDEV <hello@pandadev.net>"]
homepage = "https://vleer.app"
category = "Music"
identifier = "app.vleerapp.vleer"
before_packaging_command = "cargo build --release"
icons = [
    "assets/images/icon.png",
    "assets/images/icon-512.png",
    "assets/images/icon-256.png",
    "assets/images/icon-128.png",
    "assets/images/icon.icns",
]
out_dir = "target/release/bundles"
formats = ["all"]
