[package]
name = "vleer"
description = "Music, but without the subscription."
version = "0.1.0"
edition = "2024"
authors = ["PandaDEV <hello@pandadev.net>"]
homepage = "https://vleer.app"
repository = "https://github.com/vleerapp/vleer"
license = "AGPL-3.0"
categories = ["multimedia::audio"]

[dependencies]
gpui = { git = "https://github.com/vleerapp/zed", rev = "b8ba7a3b2efd9db89c470379386ffb3b299fa0cb" }
gpui_macros = { git = "https://github.com/vleerapp/zed", rev = "b8ba7a3b2efd9db89c470379386ffb3b299fa0cb" }
gpui_platform = { git = "https://github.com/vleerapp/zed", rev = "b8ba7a3b2efd9db89c470379386ffb3b299fa0cb", features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
] }
anyhow = "1.0.103"
dirs = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["sync"] }
futures = "0.3.32"
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
rusqlite_migration = { version = "2.6.0", features = ["from-directory"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
rodio = { git = "https://github.com/vleerapp/rodio", rev = "bc15e3456c2ca6d419c335590bee2e190c1a0fba", features = [
  "symphonia",
  "symphonia-all",
] }
symphonia-adapter-libopus = "0.3.0"
symphonia-format-isomp4 = "0.6.0"
symphonia = "0.6.0"
cuid2 = "0.1.6"
url = "2.5.8"
rust-embed = { version = "8.12.0", features = ["include-exclude"] }
lofty = "0.24.0"
walkdir = "2.5.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
image = "0.25.10"
sha2 = "0.11.0"
indexmap = "2.14.0"
rustc-hash = "2.1.3"
unicode-segmentation = "1.13.3"
lru = "0.18.0"
lazy_static = "1.5.0"
dashmap = "6.2.1"
ureq = { version = "3.3.0", features = ["json"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
semver = "1.0.28"
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
souvlaki = "0.8.3"
spectrum-analyzer = "1.8.0"
discord-rich-presence = "1.1.0"
chrono = "0.4.45"
base64 = "0.22.1"
itertools = "0.15.0"
rand = "0.10.2"
async-trait = "0.1.89"
raw-window-handle = "0.6.2"
interprocess = "2.4.2"

[dev-dependencies]
serde_json = "1.0.150"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.10.0"
zbus = "5.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
imagesize = "0.14.0"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSImage"] }
objc2-core-foundation = { version = "0.3.2", features = ["CFCGTypes"] }
objc2-foundation = { version = "0.3.2", features = [
  "NSData",
  "NSDictionary",
  "NSObject",
  "NSValue",
] }
objc2-media-player = { version = "0.3.2", features = [
  "MPMediaItem",
  "MPNowPlayingInfoCenter",
  "MPRemoteCommand",
  "MPRemoteCommandCenter",
  "MPRemoteCommandEvent",
  "block2",
  "objc2-app-kit",
  "objc2-core-foundation",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Devices_Enumeration",
  "Foundation_Collections",
  "Media",
  "Media_Audio",
  "Media_MediaProperties",
  "Media_Render",
  "Storage_Search",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_System_WinRT",
] }
windows-future = "0.3.2"
windows-result = "0.4.1"

[package.metadata.packager]
product_name = "Vleer"
description = "Music, but without the subscription."
authors = ["PandaDEV <hello@pandadev.net>"]
homepage = "https://vleer.app"
category = "Music"
identifier = "app.vleerapp.vleer"
before_packaging_command = "cargo build --release"
icons = [
  "assets/images/icon.png",
  "assets/images/icon-512.png",
  "assets/images/icon-256.png",
  "assets/images/icon-128.png",
  "assets/images/icon.icns",
]
out_dir = "target/release/bundles"
formats = ["dmg", "wix", "appimage", "deb"]

[package.metadata.packager.macos]
signing_identity = "-"
